--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="clickListener"
-            type="com.example.taskstodo.ui.TaskListItemListener" />
+            type="com.example.taskstodo.taskList.TaskListItemListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
