--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="item"
-            type="com.example.taskstodo.data.Word" />
+            type="com.example.taskstodo.data.Task" />
 
         <variable
             name="clickListener"
@@ -28,7 +27,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:background="@android:color/holo_orange_light"
                 android:onClick="@{() -> clickListener.onClick(item)}"
-                android:text="@{item.word}" />
+                android:text="@{item.task}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
